# DependencyInspection

./: .dockerignore  .flaskenv  .gitignore  Dockerfile-autogenerated  README.md  config.py  docker-compose.yml  neo4j_auth.txt  pyproject.toml  testroutes.sh  traefik.yaml  traefik_dynamic.yaml  vercel.json
backend/: .dockerignore  .envExample  .envold  .gitignore  .quartenv  Dockerfile  README.md  dev.py  manage.py  oldpoetry.toml  oldpyproject.toml  pyproject.toml  pyrightconfig.json  settings.toml
backend/dependencyinspection/: __init__.py  analyzer.py  application.py  asgi.py  commonpackages.py  config.py  data_for_frontend.py  graph.py  manage.py  server_sent_event.py  utils.py
backend/dependencyinspection/_models/: __init__.py  user.py
backend/dependencyinspection/data/: __init__.py  cache.py  main.py  routes.py  scraper.py  type_analyzer.py  type_debug.py
backend/dependencyinspection/extensions/: neo4j_connection.py
backend/dependencyinspection/migrations/: __init__.py  main.py  migration_functions.py  update_neo4j_schema.py
dependencyinspection/: __init__.py  dfs.py  graph.py  server_sent_event.py
dependencyinspection/_models/: package.py
dependencyinspection/data/: cache.py  main.py  routes.py  scraper.py
docs/: Logo.png.kra  README.md  install-docker.md  install.md  security.md
frontend/: Dockerfile  EarlyDockerfileEarly  babel.config.js  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
npmvisual/: data_for_frontend.py  dfs.py  graph.py
(+72 files in other folders)
