[project]
name = "dependencyinspection"
version = "0.1.0"
description = "inspect your npm dependencies"
authors = [{ name = "Nicholas Stafford", email = "ngstafford1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "quart (>=0.20.0,<0.21.0)",
  "neomodel (>=5.4.2,<6.0.0)",
  "networkx (>=3.4.2,<4.0.0)",
  "neo4j (>=5.27.0,<6.0.0)",
  "pydantic (>=2.10.5,<3.0.0)",
  "dynaconf (>=3.2.6,<4.0.0)",
  "werkzeug (>=3.1.3,<4.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "numpy (>=2.2.2,<3.0.0)",
  "typing-extensions (>=4.12.2,<5.0.0)",
  "scipy (>=1.15.1,<2.0.0)",
]

# [tool.poetry.scripts]
# dev = "hypercorn dependencyinspection.asgi:app -b 0.0.0.0:5001 --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
